fixed-not overflowing

--- a/extensions/cod-popup/assets/cod-popup.css
+++ b/extensions/cod-popup/assets/cod-popup.css
@@ -1,7 +1,9 @@
-.product__info-wrapper,
-.product__info-wrapper.grid__item.scroll-trigger {
-  all: unset !important;
+.cod-popup-container * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 body {
   overflow-x: hidden !important;
 }
@@ -99,10 +101,8 @@ input:focus-visible {
   position: fixed;
   top: 0;
   left: 0;
-
   width: 100%;
   height: 100%;
-
   display: flex;
   align-items: flex-start; /* key change */
   justify-content: center;
@@ -134,7 +134,7 @@ input:focus-visible {
   max-width: fit-content;
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 16px;
 }
 /* ANIMATION */
 .cod-popup.active .cod-popup-content {
@@ -166,7 +166,6 @@ input:focus-visible {
 .cod-popup-content form {
   display: flex;
   flex-direction: column;
-  gap: 8px;
 }
 
 .popup-title {
@@ -222,6 +221,7 @@ input:focus-visible {
   flex-direction: column;
   outline: none;
   border: none;
+  margin: 0;
 }
 
 #codOrderForm fieldset label {
@@ -232,4 +232,5 @@ input:focus-visible {
   padding: 8px 16px;
   font-size: 18px;
   transition: all 0.3s;
+  border-radius: 8px;
 }
